# global-economy-crisis-observatory

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: _common.py  daily_market_data.py  hourly_news.py  weekly_macro_indicators.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/staging/: sources.yml
docker/airflow/: Dockerfile  requirements.txt
docker/postgres/: init-multiple-dbs.sh
docs/: data_dictionary.md
sql/init/: 01_create_schemas.sql  02_create_raw_tables.sql
src/: cli.py
src/ingestion/: base.py  fred_client.py  market_client.py  news_client.py  worldbank_client.py
src/utils/: config.py  db.py  logging.py
src/validation/: schemas.py
tests/: conftest.py
tests/unit/: test_fred_client.py  test_news_client.py  test_validation_schemas.py  test_worldbank_client.py
